Create html skeleton & basic layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
   <body>
     <h1>Etch-n-Sketch</h1>
 
+    <div class="canvas">
+      <div class="container">
+        <div class="toolkit">
+          <div class="wrapper">
+            <button class="eraser"></button>
+            <div class="colors">
+              <button class="color"></button>
+              <button class="color"></button>
+              <button class="color"></button>
+              <button class="color"></button>
+              <button class="color"></button>
+            </div>
+          </div>
+        </div>
+        <div class="board"></div>
+      </div>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
