--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
       <div class="container">
         <div class="toolkit">
           <div class="wrapper">
-            <button class="eraser"></button>
+            <button class="eraser">
+              <img class="icon eraser" src="img/ink_eraser_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="eraser" role="img">
+            </button>
             <div class="colors">
-              <button class="color"></button>
-              <button class="color"></button>
-              <button class="color"></button>
-              <button class="color"></button>
-              <button class="color"></button>
+              <button class="color red"></button>
+              <button class="color blue"></button>
+              <button class="color green"></button>
+              <button class="color yellow"></button>
+              <button class="color black"></button>
             </div>
           </div>
         </div>
