--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
 
   <body>
-    <h1>Etch-n-Sketch</h1>
 
     <div class="canvas">
       <div class="container">
@@ -24,6 +23,7 @@
               <button class="color green"></button>
               <button class="color yellow"></button>
               <button class="color black"></button>
+              <button class="color white"></button>
             </div>
           </div>
         </div>
