Improve performance & clarify variable naming
Improved drawing performance by utilizing event delagation, instead of
assigning thousands of individual eventlisteners to each 'pixel'. Also
updated variable and function names to be more contextually precise for
readability.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
               <img class="icon eraser" src="img/ink_eraser_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="eraser" role="img">
             </button>
             <div class="colors">
-              <button class="color red"></button>
-              <button class="color blue"></button>
-              <button class="color green"></button>
-              <button class="color yellow"></button>
-              <button class="color black"></button>
-              <button class="color white"></button>
+              <button class="color red" data-color="#f00"></button>
+              <button class="color green" data-color="#0f0"></button>
+              <button class="color blue" data-color="#00f"></button>
+              <button class="color yellow" data-color="#ff0"></button>
+              <button class="color black" data-color="#000"></button>
+              <button class="color white" data-color="#fff"></button>
             </div>
           </div>
         </div>
