Fix specificity & initialize animate.css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Normalize CSS behavior -->
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/media-query.css">
+    <!-- Primary Styling -->
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/media-query.css">
+    <link rel="stylesheet" href="./css/animate.css">
     <title>Etch-n-Sketch</title>
   </head>
 
