--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
       <div class="container">
         <div class="toolkit">
           <div class="wrapper">
-            <button class="eraser">
+            <button class="eraser" style="--selected-color: #2f4f4f">
               <img class="icon eraser" src="img/ink_eraser_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="eraser" role="img">
             </button>
             <div class="colors">
-              <button class="color red" data-color="#f00"></button>
-              <button class="color green" data-color="#0f0"></button>
-              <button class="color blue" data-color="#00f"></button>
-              <button class="color yellow" data-color="#ff0"></button>
-              <button class="color black" data-color="#000"></button>
-              <button class="color white" data-color="#fff"></button>
+              <button class="color" style="--selected-color: #f00"></button>
+              <button class="color" style="--selected-color: #0f0"></button>
+              <button class="color" style="--selected-color: #00f"></button>
+              <button class="color" style="--selected-color: #ff0"></button>
+              <button class="color" style="--selected-color: #000"></button>
+              <button class="color" style="--selected-color: #fff"></button>
             </div>
           </div>
         </div>
